<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="8dp"
    app:cardCornerRadius="2dp"
    app:cardElevation="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/card_expand_vehicle"
        android:transitionName="card__expand_vehicle ">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:id="@+id/vehicle_image"

            android:contentDescription="@string/vehicle_image_description"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/vehicle_image"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"

            android:fontFamily="sans-serif-light"

            android:textColor="#000000"
            android:id="@+id/card_year"
            android:text="@string/year"
            android:textSize="@dimen/text_size"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/vehicle_image"
            android:layout_toEndOf="@id/card_year"
            android:layout_marginStart="6dp"
            android:layout_marginTop="16dp"

            android:id="@+id/card_make"

            android:fontFamily="sans-serif-light"
            android:textColor="#000000"
            android:text="@string/manufacturer"

            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/vehicle_image"
            android:layout_toEndOf="@id/card_make"
            android:layout_marginStart="6dp"
            android:layout_marginTop="16dp"

            android:id="@+id/card_model"
            android:text="@string/model"

            android:fontFamily="sans-serif-light"
            android:textColor="#000000"
            android:textSize="@dimen/text_size"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_year"
            android:layout_alignStart="@id/card_year"

            android:fontFamily="sans-serif-medium"
            android:id="@+id/card_mileage"

            android:text="@string/mileage"

            android:textSize="14sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/card_mileage"
            android:layout_below="@id/card_model"
            android:layout_marginStart="6dp"

            android:fontFamily="sans-serif-medium"
            android:id="@+id/maint_type_text"

            android:text="@string/miles"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_mileage"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"

            android:textColor="#616161"

            android:fontFamily="sans-serif-medium"
            android:id="@+id/next_maint_header"

            android:text="@string/next_maintenance_item"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/next_maint_header"
            android:layout_alignStart="@+id/next_maint_header"

            android:text="@string/maint_item"
            android:textSize="18sp"
            android:fontFamily="sans-serif-light"
            android:id="@+id/next_maint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/next_maint"
            android:layout_alignStart="@+id/next_maint"


            android:text="@string/estimated_cost"
            android:textSize="14sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="#616161"

            android:id="@+id/maint_cost_header" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/maint_cost_header"
            android:layout_alignStart="@+id/maint_cost_header"
            android:layout_marginBottom="16dp"


            android:text="@string/cost_item"
            android:textSize="18sp"
            android:id="@+id/est_cost_item"
            android:fontFamily="sans-serif-light"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/est_cost_item"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#e0e0e0"
            android:id="@+id/divider">
        </View>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"

            android:background="?attr/selectableItemBackgroundBorderless"

            android:text="@string/update_mileage"
            android:textSize="16sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorAccent"
            android:id="@+id/update_miles" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:layout_toEndOf="@id/update_miles"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"

            android:background="?attr/selectableItemBackgroundBorderless"

            android:fontFamily="sans-serif-medium"
            android:id="@+id/remove_bike"

            android:text="@string/remove"
            android:textSize="16sp"

            android:textColor="#000000"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/divider"

            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"

            android:tint="#9e9e9e"
            android:id="@+id/maintenance_list_button"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:focusable="true"
            android:src="@drawable/ic_assignment_black_24dp"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/maintenance_list_button"
            android:layout_below="@id/divider"

            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"

            android:tint="#9e9e9e"

            android:focusable="true"
            android:id="@+id/bike_settings"

            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_build_black_24dp"
            />


    </RelativeLayout>

</android.support.v7.widget.CardView>