<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="2dp"
    app:cardElevation="1dp"
    app:cardCornerRadius="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maint_name"
            android:id="@+id/maint_name"
            android:textSize="@dimen/text_size"
            android:fontFamily="sans-serif-medium"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/upcoming"
            android:textSize="18sp"
            android:fontFamily="sans-serif-thin"
            android:id="@+id/maint_upcoming"
            android:layout_below="@+id/maint_name"
            android:layout_alignStart="@+id/maint_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maint_interval_cost"
            android:textSize="18sp"
            android:fontFamily="sans-serif-thin"
            android:id="@+id/maint_interval_cost"
            android:layout_below="@+id/maint_upcoming"
            android:layout_alignStart="@+id/maint_upcoming" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/maint_interval_cost"
            android:layout_marginBottom="16dp"
            android:id="@+id/llpast"
            android:layout_alignStart="@+id/maint_interval_cost">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/past" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e0e0e0"
            android:layout_marginStart="16dp"
            android:id="@+id/divider"
            android:layout_marginEnd="16dp"
            android:layout_below="@id/llpast"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/close"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_below="@id/divider"
            android:background="#00ffffff"
            android:tint="#e0e0e0"
            android:src="@drawable/ic_close_black_24dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_toStartOf="@id/close"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/add_date"
            android:layout_below="@id/divider"
            android:background="#00ffffff"
            android:tint="#e0e0e0"
            android:src="@drawable/ic_add_circle_outline_black_24dp" />
    </RelativeLayout>

</android.support.v7.widget.CardView>